fix spacing flowing

--- a/src/sass/_inside.sass
+++ b/src/sass/_inside.sass
@@ -348,6 +348,8 @@
 		-webkit-column-break-inside: avoid
 		page-break-inside: avoid
 		break-inside: avoid
+		display: inline-block
+		width: 100%
 	small
 		display: block
 		color: #999999 
@@ -362,12 +364,16 @@
 		margin-bottom: 13px 
 		letter-spacing: 5px 
 		font-weight: normal
+		display: inline-block
+		width: 100%
 	ul
 		list-style-type: disc 
-		margin: 1em 2em 1em 17px
+		margin: 0 2em 1em 17px
 		-webkit-column-break-inside: avoid
 		page-break-inside: avoid
 		break-inside: avoid
+		display: inline-block
+		width: 100%
 	li
 		-webkit-column-break-inside: avoid
 		page-break-inside: avoid
